Archive2/0f/936937762c9973/output


clang++ ####################################################

main.cpp:10:5: error: call to 'foo' is ambiguous
    foo({2.1});
    ^~~
main.cpp:2:6: note: candidate function
void foo(long) {
     ^
main.cpp:5:6: note: candidate function
void foo(short) {
     ^
1 error generated.
